--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
+    "react-markdown": "^10.1.0",
     "react-scripts": "5.0.1",
+    "rehype-highlight": "^7.0.2",
+    "remark-gfm": "^4.0.1",
     "web-vitals": "^2.1.4",
     "zustand": "^5.0.7"
   },
